fix touchEnd and onClick conflict on mobile env

--- a/src/components/project-modal/ProjectModal.scss
+++ b/src/components/project-modal/ProjectModal.scss
@@ -3,8 +3,11 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-
-  .imgs {
+  object-fit: contain;
+  box-sizing: border-box;
+  img {
+    max-width: 100%;
+    max-height: 100%;
     object-fit: contain;
     margin: 1rem 0;
   }
